--- a/cookieclicker/index.html
+++ b/cookieclicker/index.html
@@ -3,7 +3,7 @@
 
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-        <title>Babylon Template</title>
+        <title>Cookie Clicker</title>
 
         <style>
             html, body {
@@ -19,9 +19,6 @@
                 touch-action: none;
             }
         </style>
-
-        <script src="cookieclicker.js"></script>
-
     </head>
 
    <body>
