--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
   <style>
     body {
       font-family: sans-serif;
-      background-color: #111;
-      color: #fff;
+      background-color: #fff6f6;
+      color: #060505;
       display: flex;
       flex-direction: column;
       align-items: center;
       padding: 2rem;
     }
     h1 {
-      color: #00ccff;
+      color: #ee00ff;
     }
     .game-links {
       margin-top: 2rem;
@@ -23,17 +23,17 @@
       gap: 1rem;
     }
     a {
-      color: #00ccff;
+      color: #ee00ff;
       text-decoration: none;
       font-size: 1.2rem;
-      border: 2px solid #00ccff;
+      border: 2px solid #ee00ff;
       padding: 0.5rem 1rem;
       border-radius: 8px;
       transition: background 0.2s;
     }
     a:hover {
-      background-color: #00ccff;
-      color: #111;
+      background-color: #ee00ff;
+      color: #fafafa;
     }
   </style>
 </head>
@@ -44,7 +44,7 @@
     <a href="/cookieclicker/">Play Cookie Clicker</a>
   </div>
 </body>
-</html><img src ="assets/gamepreview/cookie_3.png"><br>Play Cookie Clicker</a>
+</html><img src ="assets/gamepreview/cookie_3.png"></a>
    </div>
 </body>
 </html>
