--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <style>
     body {
       font-family: sans-serif;
-      background-color: #fff6f6;
+      background-color: #ffffff;
       color: #060505;
       display: flex;
       flex-direction: column;
